# 4connect

./: .depend  .gitignore  BitBoard.h  CMakeLists.txt  Dockerfile  Makefile  README.md  app.py  bitboard.h  bitboard.hpp  board_to_moves.py  book.h  c4solver  connect4  lookupTable.hpp  lookup_table.h  main.cpp  run.sh  solver.h  solver.hpp  test.txt
reports/: report_version_1_0.txt  report_version_1_0_1.txt  report_version_1_0_2.txt
